ajout de la structure + pseudo style

--- a/index.html
+++ b/index.html
@@ -54,7 +54,27 @@
 </head>
 
 <body>
-    <h1>Ce site est en construction</h1>
+    <div>
+        <div id="logo">
+            <img src="./public/logo.png" alt="Logo Cactus et vous" />
+        </div>
+        <h1>Encore un peu de patience...</h1>
+        <p>Nous vous préparons de belles choses que nous avons hâte de vous présenter ! Vous pouvez vous inscrire ci-dessous pour être tenu au courant de l’avancement du projet.</p>
+        <form action="">
+            <input type="text" placeholder="Adresse mail">
+            <button type="submit">S'inscrire</button>
+        </form>
+        <ul>
+            <li>Insta</li>
+            <li>Twitter</li>
+            <li>Facebook</li>
+        </ul>
+        
+    </div>
+    <footer>
+        <p>Cactus et vous</p>
+        <p>© Copyright 2022</p>
+    </footer>
     <script type="module" src="./main.js"></script>
     <!-- Google Tag Manager (noscript) -->
     <noscript>
