--- a/index.html
+++ b/index.html
@@ -50,20 +50,34 @@
     <link rel="apple-touch-icon" sizes="152x152" href="./public/touch-icon-ipad.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="./public/touch-icon-iphone-retina.png" />
     <link rel="apple-touch-icon" sizes="167x167" href="./public/touch-icon-ipad-retina.png" />
-    <title>Cactus & Vous| Dispositif Cactus & Vous</title>
+    <title>Escapee</title>
 </head>
 
 <body>
     <div>
         <div id="logo">
-            <img src="./public/logo.png" alt="Logo Cactus et vous" />
+            <img src="./public/logo.png" alt="Logo Escapee" />
         </div>
         <h1>Encore un peu de patience...</h1>
-        <p>Nous vous préparons de belles choses que nous avons hâte de vous présenter ! Vous pouvez vous inscrire ci-dessous pour être tenu au courant de l’avancement du projet.</p>
-        <form action="">
-            <input type="text" placeholder="Adresse mail">
-            <button type="submit">S'inscrire</button>
-        </form>
+        <p>Nous vous préparons de belles choses que nous avons hâte de vous présenter ! Vous pouvez vous inscrire ci-dessous pour être tenu au courant de l’avancement du projet <em>Escapee</em>.</p>
+        <!-- Begin Mailchimp Signup Form -->
+        <div id="mc_embed_signup">
+            <p id="result_news" style="display: none;"></p>
+            <form action="https://gmail.us18.list-manage.com/subscribe/post?u=a89c450632a67a11b36771808&amp;id=cafdb69fa3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+                <div class="mc-field-group">
+                    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Votre adresse e-mail" required>
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                        <input type="text" name="b_6d4892d2a4008d1148aba7142_4ef5deedef" tabindex="-1" value="">
+                    </div>
+                    <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn">S'inscrire</button>
+                    <div id="subscribe-result">
+                </div>
+            </div>
+            </form>
+        </div>
+        <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+        <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+        <!--End mc_embed_signup-->
         <ul>
             <li>Insta</li>
             <li>Twitter</li>
@@ -72,10 +86,11 @@
         
     </div>
     <footer>
-        <p>Cactus et vous</p>
+        <p>Escapee</p>
         <p>© Copyright 2022</p>
     </footer>
     <script type="module" src="./main.js"></script>
+    <script type="module" src="./home.js"></script>
     <!-- Google Tag Manager (noscript) -->
     <noscript>
         <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NLD79JX"
