deploy dev branch for subdomain

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <html lang="fr" id="home">
 
 <head>
-   <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-NLD79JX');
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-NLD79JX');
     </script>
     <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
@@ -59,42 +62,48 @@
             <img src="./public/logo.png" alt="Logo Escapee" />
         </div>
         <h1>Encore un peu de patience...</h1>
-        <p>Nous vous préparons de belles choses que nous avons hâte de vous présenter ! Vous pouvez vous inscrire ci-dessous pour être tenu au courant de l’avancement du projet <em>Escapee</em>.</p>
+        <p>Nous vous préparons de belles choses que nous avons hâte de vous présenter ! Vous pouvez vous inscrire
+            ci-dessous pour être tenu au courant de l’avancement du projet <em>Escapee</em>.</p>
         <!-- Begin Mailchimp Signup Form -->
         <div id="mc_embed_signup">
             <p id="result_news" style="display: none;"></p>
-            <form action="https://gmail.us18.list-manage.com/subscribe/post?u=a89c450632a67a11b36771808&amp;id=cafdb69fa3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+            <form
+                action="https://gmail.us18.list-manage.com/subscribe/post?u=a89c450632a67a11b36771808&amp;id=cafdb69fa3"
+                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                target="_blank">
                 <div class="mc-field-group">
-                    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Votre adresse e-mail" required>
+                    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL"
+                        placeholder="Votre adresse e-mail" required>
                     <div style="position: absolute; left: -5000px;" aria-hidden="true">
                         <input type="text" name="b_6d4892d2a4008d1148aba7142_4ef5deedef" tabindex="-1" value="">
                     </div>
                     <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn">S'inscrire</button>
                     <div id="subscribe-result">
+                    </div>
                 </div>
-            </div>
             </form>
         </div>
         <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
-        <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+        <script
+            type='text/javascript'>(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
         <!--End mc_embed_signup-->
         <ul>
             <li>Insta</li>
             <li>Twitter</li>
             <li>Facebook</li>
         </ul>
-        
+
     </div>
     <footer>
         <p>Escapee</p>
         <p>© Copyright 2022</p>
     </footer>
-    <script type="module" src="./main.js"></script>
-    <script type="module" src="./home.js"></script>
+    <script type="module" src="./scripts/main.js"></script>
+    <script type="module" src="./scripts/home.js"></script>
     <!-- Google Tag Manager (noscript) -->
     <noscript>
-        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NLD79JX"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NLD79JX" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe>
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
 </body>
