update google tag manager

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html lang="fr" id="home">
 
 <head>
-    <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
             w[l] = w[l] || []; w[l].push({
                 'gtm.start':
@@ -9,8 +8,8 @@
             }); var f = d.getElementsByTagName(s)[0],
                 j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
                     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-NLD79JX');
-    </script>
+        })(window, document, 'script', 'dataLayer', 'GTM-KW5X9XD');</script>
+    <!-- End Google Tag Manager -->
     <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -57,6 +56,8 @@
 </head>
 
 <body>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KW5X9XD" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
     <div>
         <div id="logo">
             <img src="./public/logo.png" alt="Logo Escapee" />
@@ -100,12 +101,6 @@
     </footer>
     <script type="module" src="./scripts/main.js"></script>
     <script type="module" src="./scripts/home.js"></script>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript>
-        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NLD79JX" height="0" width="0"
-            style="display:none;visibility:hidden"></iframe>
-    </noscript>
-    <!-- End Google Tag Manager (noscript) -->
 </body>
 
 </html>
