--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
         <div id="mc_embed_signup">
             <p id="result_news" style="display: none;"></p>
             <form
-                action="https://gmail.us18.list-manage.com/subscribe/post?u=a89c450632a67a11b36771808&amp;id=cafdb69fa3"
+                action="https://Escapee.us9.list-manage.com/subscribe/post?u=8e71f96c5c933f5329444df27&amp;id=3ad5a89f21"
                 method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
                 target="_blank">
                 <div class="mc-field-group">
                     <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL"
                         placeholder="Votre adresse e-mail" required>
                     <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                        <input type="text" name="b_6d4892d2a4008d1148aba7142_4ef5deedef" tabindex="-1" value="">
+                        <input type="text" name="b_8e71f96c5c933f5329444df27_3ad5a89f21" tabindex="-1" value="">
                     </div>
                     <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn">S'inscrire</button>
                     <div id="subscribe-result">
@@ -90,7 +90,7 @@
         <!--End mc_embed_signup-->
         <ul>
             <li>Insta</li>
-            <li>Twitter</li>
+            <li>Twitter</li>§
             <li>Facebook</li>
         </ul>
 
