--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </head>
 
 <body>
-    <div>
+    <div class="main-container">
         <div id="logo">
             <img src="./public/logo.png" alt="Logo Escapee" />
         </div>
