[style] header styling

--- a/index.html
+++ b/index.html
@@ -57,17 +57,39 @@
 
 <body>
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KW5X9XD" height="0" width="0"
-        style="display:none;visibility:hidden"></iframe></noscript>
+            style="display:none;visibility:hi dden"></iframe></noscript>
+    <header class="main-header-container">
+        <div class="header-background-filter"></div>
+        <article class="main-nav-container">
+            <div class="logo-container">
+                <h1 class="logo">
+                    <img src="./images/TemporaryLogo.svg">
+                </h1>
+            </div>
+            <nav class="nav-container">
+                <ul>
+                    <li>Accueil</li>
+                    <li>Qui sommes nous</li>
+                    <li>Planifier votre voyage</li>
+                    <li class="profil">Profil</li>
+                </ul>
+            </nav>
+        </article>
+        <article class="main-title-container">
+            <h1 class="title-container">
+                <p>Evader-<span class="title-underline">vous</span>,</p>
+                <p>Retrouvez-<span class="title-underline">vous</span>.</p>
+            </h1>
+        </article>
+        <article class="scroll-down-container">
+            <a>
+                <img src="./images/scroll-down.svg">
+            </a>
+        </article>
+    </header>
     <div class="main-container">
-    <div>
-        <div id="logo">
-            <img src="./public/logo.png" alt="Logo Escapee" />
-        </div>
-        <h1>Encore un peu de patience...</h1>
-        <p>Nous vous préparons de belles choses que nous avons hâte de vous présenter ! Vous pouvez vous inscrire
-            ci-dessous pour être tenu au courant de l’avancement du projet <em>Escapee</em>.</p>
         <!-- Begin Mailchimp Signup Form -->
-        <div id="mc_embed_signup">
+        <!-- <div id="mc_embed_signup">
             <p id="result_news" style="display: none;"></p>
             <form
                 action="https://Escapee.us9.list-manage.com/subscribe/post?u=8e71f96c5c933f5329444df27&amp;id=3ad5a89f21"
@@ -84,17 +106,11 @@
                     </div>
                 </div>
             </form>
-        </div>
+        </div> -->
         <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
         <script
             type='text/javascript'>(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
         <!--End mc_embed_signup-->
-        <ul>
-            <li>Insta</li>
-            <li>Twitter</li>§
-            <li>Facebook</li>
-        </ul>
-
     </div>
     <footer>
         <p>Escapee</p>
