[feature] add form for survey

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             style="display:none;visibility:hidden"></iframe></noscript>
     <div>
         <div id="logo">
-            <img src="./public/logo.png" alt="Logo Escapee" />
+            <img src="./images/logo.svg" alt="Logo Escapee" />
         </div>
         <h1>Encore un peu de patience...</h1>
         <p>Nous vous préparons de belles choses que nous avons hâte de vous présenter ! Vous pouvez vous inscrire
@@ -88,11 +88,17 @@
         <script
             type='text/javascript'>(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
         <!--End mc_embed_signup-->
-        <ul>
-            <li>Insta</li>
-            <li>Twitter</li>§
-            <li>Facebook</li>
-        </ul>
+
+        <h2>Si vous souhaitez contribuer à l'évolution de notre projet, vous pouvez également participer à notre bref
+            enquête </h2>
+        <button class="btn-enquete">enquête</button>
+        <div class="modal-form">
+            <a class="cross-form"><img src="/images/cross.svg"></a>
+            <iframe
+                src="https://docs.google.com/forms/d/e/1FAIpQLSdKmFwYompyt6iEDJMsa9quEIy9sZu5FJJDvkp3GLagzIIomw/viewform?embedded=true"
+                width="640" height="4564" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        </div>
+
 
     </div>
     <footer>
