[fix] google analytics

--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
 <html lang="fr" id="home">
 
 <head>
+    <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
             w[l] = w[l] || []; w[l].push({
                 'gtm.start':
                     new Date().getTime(), event: 'gtm.js'
             }); var f = d.getElementsByTagName(s)[0],
                 j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-KW5X9XD');</script>
-    <!-- End Google Tag Manager -->
-    <!-- End Google Tag Manager -->
+                    'https://www.googletagmanager.com/gtm.js?id=%27+i+dl;f.parentNode.insertBefore(j,f);
+        })(window, document, 'script', 'dataLayer', 'GTM-PNBXLDC');</script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <meta name="description"
         content="Cactus et vous, vous présente son dispositif basé sur l'entrepreneuriat social, l'entrepreneuriat spécialisé dans les valeurs humaines et sociales" />
-    <meta name="keywords"
-        content="valeurs, social, humaines, entrepreneuriat, dispositif, agir, épanouissement, autrement, personnel, développement " /> -->
     <meta name="author" content="Blueberry DevTeam" />
     <!-- <meta name="theme-color" content="#FF5740" /> -->
-
     <!-- <meta property="og:title" content="Agir c'est s'épanouir | Dispositif A double Sens" />
     <meta property="og:description"
         content="A Double Sens vous présente son dispositif basé sur l'entrepreneuriat social, l'entrepreneuriat spécialisé dans les valeurs humaines et sociales" /> -->
@@ -33,16 +29,6 @@
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="Logo Cactus et vous" />
-
-    <meta name="twitter:title" content="Cactus et vous | cactus et vous" />
-    <!-- <meta name="twitter:description"
-        content="A Double Sens vous présente son dispositif basé sur l'entrepreneuriat social, l'entrepreneuriat spécialisé dans les valeurs humaines et sociales" /> -->
-    <!-- <meta name="twitter:url" content="https://cactusetvous.fr/" />
-    <meta name="twitter:site" content="@cactusetvous.fr" /> -->
-    <meta name="twitter:creator" content="@Blueberry DevTeam" />
-    <!-- <meta name="twitter:image" content="https://cactusetvous.fr/twitter_card.png" /> -->
-    <meta name="twitter:card" content="summary_large_image" />
-
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Cactus et vous" />
@@ -56,7 +42,7 @@
 </head>
 
 <body>
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KW5X9XD" height="0" width="0"
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PNBXLDC" height="0" width="0"
             style="display:none;visibility:hidden"></iframe></noscript>
     <div>
         <div id="logo">
@@ -65,7 +51,6 @@
         <h1>Encore un peu de patience...</h1>
         <p>Nous vous préparons de belles choses que nous avons hâte de vous présenter ! Vous pouvez vous inscrire
             ci-dessous pour être tenu au courant de l’avancement du projet <em>Escapee</em>.</p>
-        <!-- Begin Mailchimp Signup Form -->
         <div id="mc_embed_signup">
             <p id="result_news" style="display: none;"></p>
             <form
