--- a/index.html
+++ b/index.html
@@ -153,14 +153,20 @@
             </script>
             <!--End mc_embed_signup-->
         </div>
-        <footer>
-            <p>Escapee</p>
-            <p>© Copyright 2022</p>
-        </footer>
-        <script type="module"
-            src="./scripts/main.js"></script>
-        <script type="module"
-            src="./scripts/home.js"></script>
-    </body>
+        <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+        <script
+            type='text/javascript'>(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+        <!--End mc_embed_signup-->
+    </div>
+    <footer>
+        <p>Escapee</p>
+        <p>© Copyright 2022</p>
+        <p>
+            <a href="privacy-policy.html">Mention légale, Politique de confidentialité</a>
+        </p>
+    </footer>
+    <script type="module" src="./scripts/main.js"></script>
+    <script type="module" src="./scripts/home.js"></script>
+</body>
 
 </html>
