--- a/index.html
+++ b/index.html
@@ -1,163 +1,117 @@
-<html lang="fr"
-    id="home">
+<html lang="fr" id="home">
 
-    <head>
-        <!-- Google Tag Manager -->
-        <script>
-            (function (w, d, s, l, i) {
-                w[l] = w[l] || [];
-                w[l].push({
-                    'gtm.start': new Date().getTime(),
-                    event: 'gtm.js'
-                });
-                var f = d.getElementsByTagName(s)[0],
-                    j = d.createElement(s),
-                    dl = l != 'dataLayer' ? '&l=' + l : '';
-                j.async = true;
-                j.src =
-                    'https://www.googletagmanager.com/gtm.js?id=%27+i+dl;f.parentNode.insertBefore(j,f)';
-            })(window, document, 'script', 'dataLayer', 'GTM-PNBXLDC');
-        </script>
-        <meta charset="UTF-8" />
-        <meta name="viewport"
-            content="width=device-width, initial-scale=1" />
-        <!-- <meta name="description"
+<head>
+    <!-- Google Tag Manager -->
+    <script>
+        (function (w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=%27+i+dl;f.parentNode.insertBefore(j,f)';
+        })(window, document, 'script', 'dataLayer', 'GTM-PNBXLDC');
+    </script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- <meta name="description"
         content="Cactus et vous, vous présente son dispositif basé sur l'entrepreneuriat social, l'entrepreneuriat spécialisé dans les valeurs humaines et sociales" />
     <meta name="author" content="Blueberry DevTeam" /> -->
-        <!-- <meta name="theme-color" content="#FF5740" /> -->
-        <!-- <meta property="og:title" content="Agir c'est s'épanouir | Dispositif A double Sens" />
+    <!-- <meta name="theme-color" content="#FF5740" /> -->
+    <!-- <meta property="og:title" content="Agir c'est s'épanouir | Dispositif A double Sens" />
     <meta property="og:description"
         content="A Double Sens vous présente son dispositif basé sur l'entrepreneuriat social, l'entrepreneuriat spécialisé dans les valeurs humaines et sociales" /> -->
-        <!-- <meta property="og:url" content="https://cactusetvous.fr/" /> -->
-        <meta property="og:site_name"
-            content="Cactus et vous" />
-        <meta property="og:type"
-            content="website" />
-        <meta property="og:locale"
-            content="fr_FR" />
-        <!-- <meta property="og:image" content="http://cactusetvous.fr/open_graph.jpg" />
+    <!-- <meta property="og:url" content="https://cactusetvous.fr/" /> -->
+    <meta property="og:site_name" content="Cactus et vous" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="fr_FR" />
+    <!-- <meta property="og:image" content="http://cactusetvous.fr/open_graph.jpg" />
     <meta property="og:image:secure_url" content="https://cactusetvous.fr/open_graph.jpg" /> -->
-        <meta property="og:image:type"
-            content="image/jpg" />
-        <meta property="og:image:width"
-            content="1200" />
-        <meta property="og:image:height"
-            content="630" />
-        <meta property="og:image:alt"
-            content="Logo Cactus et vous" />
-        <meta name="mobile-web-app-capable"
-            content="yes" />
-        <meta name="apple-mobile-web-app-status-bar-style"
-            content="black-translucent" />
-        <meta name="apple-mobile-web-app-title"
-            content="Cactus et vous" />
+    <meta property="og:image:type" content="image/jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Logo Cactus et vous" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="Cactus et vous" />
 
-        <link rel="icon"
-            type="image/png"
-            href="./public/icon.png" />
-        <link rel="apple-touch-icon"
-            href="./public/apple-touch-icon.png" />
-        <link rel="apple-touch-icon"
-            sizes="152x152"
-            href="./public/touch-icon-ipad.png" />
-        <link rel="apple-touch-icon"
-            sizes="180x180"
-            href="./public/touch-icon-iphone-retina.png" />
-        <link rel="apple-touch-icon"
-            sizes="167x167"
-            href="./public/touch-icon-ipad-retina.png" />
-        <title>Escapee</title>
-    </head>
+    <link rel="icon" type="image/png" href="./public/icon.png" />
+    <link rel="apple-touch-icon" href="./public/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="./public/touch-icon-ipad.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./public/touch-icon-iphone-retina.png" />
+    <link rel="apple-touch-icon" sizes="167x167" href="./public/touch-icon-ipad-retina.png" />
+    <title>Escapee</title>
+</head>
 
-    <body>
-        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PNBXLDC"
-                height="0"
-                width="0"
-                style="display:none;visibility:hidden"></iframe></noscript>
-        <div>
-            <div id="logo">
-                <img src="./images/logo.svg"
-                    alt="Logo Escapee" />
-            </div>
-            <h1>Encore un peu de patience...</h1>
-            <p>Nous vous préparons de belles choses que nous avons hâte de vous présenter ! Vous
-                pouvez vous inscrire
-                ci-dessous pour être tenu au courant de l’avancement du projet <em>Escapee</em>.</p>
-            <div id="mc_embed_signup">
-                <p id="result_news"
-                    style="display: none;"></p>
-                <form
-                    action="https://Escapee.us9.list-manage.com/subscribe/post?u=8e71f96c5c933f5329444df27&amp;id=3ad5a89f21"
-                    method="post"
-                    id="mc-embedded-subscribe-form"
-                    name="mc-embedded-subscribe-form"
-                    class="validate"
-                    target="_blank">
-                    <div class="mc-field-group">
-                        <input type="email"
-                            value=""
-                            name="EMAIL"
-                            class="email"
-                            id="mce-EMAIL"
-                            placeholder="Votre adresse e-mail"
-                            required>
-                        <div style="position: absolute; left: -5000px;"
-                            aria-hidden="true">
-                            <input type="text"
-                                name="b_8e71f96c5c933f5329444df27_3ad5a89f21"
-                                tabindex="-1"
-                                value="">
-                        </div>
-                        <button type="submit"
-                            name="subscribe"
-                            id="mc-embedded-subscribe"
-                            class="btn">S'inscrire</button>
-                        <div id="subscribe-result">
-                        </div>
+<body>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PNBXLDC" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <div>
+        <div id="logo">
+            <img src="./images/logo.svg" alt="Logo Escapee" />
+        </div>
+        <h1>Encore un peu de patience...</h1>
+        <p>Nous vous préparons de belles choses que nous avons hâte de vous présenter ! Vous
+            pouvez vous inscrire
+            ci-dessous pour être tenu au courant de l’avancement du projet <em>Escapee</em>.</p>
+        <div id="mc_embed_signup">
+            <p id="result_news" style="display: none;"></p>
+            <form
+                action="https://Escapee.us9.list-manage.com/subscribe/post?u=8e71f96c5c933f5329444df27&amp;id=3ad5a89f21"
+                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                target="_blank">
+                <div class="mc-field-group">
+                    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL"
+                        placeholder="Votre adresse e-mail" required>
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                        <input type="text" name="b_8e71f96c5c933f5329444df27_3ad5a89f21" tabindex="-1" value="">
                     </div>
-                </form>
-            </div>
-            <h2>Si vous souhaitez contribuer à l'évolution de notre projet, vous pouvez également
-                participer à notre brêve enquête </h2>
-            <button class="btn-enquete">enquête</button>
-            <div class="modal-form">
-                <a class="cross-form"><img src="/images/cross.svg"></a>
-                <iframe
-                    src="https://docs.google.com/forms/d/e/1FAIpQLSdKmFwYompyt6iEDJMsa9quEIy9sZu5FJJDvkp3GLagzIIomw/viewform?embedded=true"
-                    width="640"
-                    height="4564"
-                    frameborder="0"
-                    marginheight="0"
-                    marginwidth="0">Loading…</iframe>
-            </div>
-            <script type='text/javascript'
-                src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
-            <script type='text/javascript'>
-                (function ($) {
-                    window.fnames = new Array();
-                    window.ftypes = new Array();
-                    fnames[0] = 'EMAIL';
-                    ftypes[0] = 'email';
-                    fnames[1] = 'FNAME';
-                    ftypes[1] = 'text';
-                    fnames[2] = 'LNAME';
-                    ftypes[2] = 'text';
-                    fnames[3] = 'ADDRESS';
-                    ftypes[3] = 'address';
-                    fnames[4] = 'PHONE';
-                    ftypes[4] = 'phone';
-                    fnames[5] = 'BIRTHDAY';
-                    ftypes[5] = 'birthday';
-                }(jQuery));
-                var $mcj = jQuery.noConflict(true);
-            </script>
-            <!--End mc_embed_signup-->
+                    <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn">S'inscrire</button>
+                    <div id="subscribe-result">
+                    </div>
+                </div>
+            </form>
+        </div>
+        <h2>Si vous souhaitez contribuer à l'évolution de notre projet, vous pouvez également
+            participer à notre brêve enquête </h2>
+        <button class="btn-enquete">enquête</button>
+        <div class="modal-form">
+            <a class="cross-form"><img src="/images/cross.svg"></a>
+            <iframe
+                src="https://docs.google.com/forms/d/e/1FAIpQLSdKmFwYompyt6iEDJMsa9quEIy9sZu5FJJDvkp3GLagzIIomw/viewform?embedded=true"
+                width="640" height="4564" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
         <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
-        <script
-            type='text/javascript'>(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+        <script type='text/javascript'>
+            (function ($) {
+                window.fnames = new Array();
+                window.ftypes = new Array();
+                fnames[0] = 'EMAIL';
+                ftypes[0] = 'email';
+                fnames[1] = 'FNAME';
+                ftypes[1] = 'text';
+                fnames[2] = 'LNAME';
+                ftypes[2] = 'text';
+                fnames[3] = 'ADDRESS';
+                ftypes[3] = 'address';
+                fnames[4] = 'PHONE';
+                ftypes[4] = 'phone';
+                fnames[5] = 'BIRTHDAY';
+                ftypes[5] = 'birthday';
+            }(jQuery));
+            var $mcj = jQuery.noConflict(true);
+        </script>
         <!--End mc_embed_signup-->
     </div>
+    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+    <script
+        type='text/javascript'>(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+    <!--End mc_embed_signup-->
     <footer>
         <p>Escapee</p>
         <p>© Copyright 2022</p>
