--- a/index.html
+++ b/index.html
@@ -51,6 +51,47 @@
 <body>
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PNBXLDC" height="0" width="0"
             style="display:none;visibility:hidden"></iframe></noscript>
+    <header>
+        <div class="logo">
+            <img src="./images/logo.svg" alt="Logo Escapee" />
+        </div>
+        <ul>
+            <li><a href="#">Accueil</a></li>
+            <li><a href="#">Qui sommes-nous ?</a></li>
+            <li><a href="#">Newsletter</a></li>
+            <li><a class="btn" href="#">Se connecter</a></li>
+        </ul>
+    </header>
+    
+    <main>
+        <section class="background">
+        </section>
+        <section>
+            <article></article>
+            <article></article>
+            <article></article>
+        </section>
+    </main>
+    <footer>
+        <ul>
+            <li>Accueil</li>
+            <li>Qui sommes-nous ?</li>
+            <li>Newsletter</li>
+            <li>Compte</li>
+        </ul>
+        <ul>
+            <li>Instagram</li>
+            <li>Instagram</li>
+            <li>Instagram</li>
+        </ul>
+        <div>
+            <p>© Copyright 2022</p>
+            <p>
+                <a href="privacy-policy.html">Mention légale, Politique de confidentialité</a>
+            </p>
+        </div>
+    </footer>
+
     <div>
         <div id="logo">
             <img src="./images/logo.svg" alt="Logo Escapee" />
