--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,24 +1,27 @@
 <html lang="fr" id="home">
 <head>
-    <script>(function (w, d, s, l, i) {
-            w[l] = w[l] || []; w[l].push({
-                'gtm.start':
-                    new Date().getTime(), event: 'gtm.js'
-            }); var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-KW5X9XD');</script>
-    <!-- End Google Tag Manager -->
-    <!-- End Google Tag Manager -->
+     <!-- Google Tag Manager -->
+     <script>
+        (function (w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=%27+i+dl;f.parentNode.insertBefore(j,f)';
+        })(window, document, 'script', 'dataLayer', 'GTM-PNBXLDC');
+    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <meta name="description"
         content="Cactus et vous, vous présente son dispositif basé sur l'entrepreneuriat social, l'entrepreneuriat spécialisé dans les valeurs humaines et sociales" />
-    <meta name="keywords"
-        content="valeurs, social, humaines, entrepreneuriat, dispositif, agir, épanouissement, autrement, personnel, développement " /> -->
-    <meta name="author" content="Blueberry DevTeam" />
+    <meta name="author" content="Blueberry DevTeam" /> -->
     <!-- <meta name="theme-color" content="#FF5740" /> -->
-
     <!-- <meta property="og:title" content="Agir c'est s'épanouir | Dispositif A double Sens" />
     <meta property="og:description"
         content="A Double Sens vous présente son dispositif basé sur l'entrepreneuriat social, l'entrepreneuriat spécialisé dans les valeurs humaines et sociales" /> -->
@@ -32,16 +35,6 @@
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="Logo Cactus et vous" />
-
-    <meta name="twitter:title" content="Cactus et vous | cactus et vous" />
-    <!-- <meta name="twitter:description"
-        content="A Double Sens vous présente son dispositif basé sur l'entrepreneuriat social, l'entrepreneuriat spécialisé dans les valeurs humaines et sociales" /> -->
-    <!-- <meta name="twitter:url" content="https://cactusetvous.fr/" />
-    <meta name="twitter:site" content="@cactusetvous.fr" /> -->
-    <meta name="twitter:creator" content="@Blueberry DevTeam" />
-    <!-- <meta name="twitter:image" content="https://cactusetvous.fr/twitter_card.png" /> -->
-    <meta name="twitter:card" content="summary_large_image" />
-
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Cactus et vous" />
@@ -53,7 +46,6 @@
     <link rel="apple-touch-icon" sizes="167x167" href="./public/touch-icon-ipad-retina.png" />
     <title>Escapee</title>
 </head>
-
 <body>
     <noscript>
         <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KW5X9XD" height="0" width="0"
@@ -61,8 +53,8 @@
         </iframe>
     </noscript>
 
-    <div class="container">
-       <div class="mention-legal">
+    <main>
+       <section class="mention-legal">
         <h2> Mentions Légales </h2>
         <h3> Éditions </h3>
         <p>
@@ -80,8 +72,8 @@
         </p>
         <h4> Hébergement</h4>
         <p>  Ce site est hébergé chez Netlify – Siège social : San Francisco, États-Unis</p>
-       </div>
-       <div class="conf">
+       </section>
+       <section class="conf">
         <h2>Conditions générales d’utilisation</h2>
         <h3>Propriété intellectuelle</h3>
         <p>L'ensemble du contenu écrit, présent sur escapee.fr est soumis au droit d'auteur. Vous devez demander l'autorisation des éditeurs du site avant toutes, publication ou copie de ces différents contenus. Toute utilisation du contenu écrit à des fins commerciales et publicitaires est strictement interdite.
@@ -132,12 +124,8 @@
         <p> Un cookie est un petit fichier, stocké sur le disque dur d’un utilisateur par le site Web. Son but est de recueillir des données relatives à vos habitudes de navigation.</p>
         <p>Des cookies tiers sont utilisés afin de suivre votre activité quant à l'utilisation de ce site web.</p>
         <p> Vous pouvez choisir de désactiver les cookies entièrement dans votre navigateur Internet, mais cela peut nuire à votre expérience utilisateur.</p>
-       </div>
-    </div>
-    <footer>
-        <p>Escapee</p>
-        <p>© Copyright 2022</p>
-    </footer>
+       </section>
+    </main>
     <script type="module" src="./scripts/main.js"></script>
     <script type="module" src="./scripts/home.js"></script>
 </body>
